--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 astroid==2.4.2
+autopep8==1.5.4
 beautifulsoup4==4.9.3
 bs4==0.0.1
 colorama==0.4.4
 isort==5.6.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+pycodestyle==2.6.0
 pylint==2.6.0
 six==1.15.0
 soupsieve==2.0.1
