--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 pycodestyle==2.6.0
 pylint==2.6.0
+selenium==3.141.0
 six==1.15.0
 soupsieve==2.0.1
 toml==0.10.2
+urllib3==1.26.2
 wrapt==1.12.1
